# empty_library

./: CMakeLists.txt  Library.pc.in  LibraryConfig.cmake.in  LibraryConfigVersion.cmake.in  MyLibrary.pro  MyQtProject.pro  README
cmake/: cmake_uninstall.cmake.in
complete/: automatch.sh
doc/: Doxyfile  Doxyfile.in  doc.tag
include/: my_class.h
samples/: CMakeLists.txt
src/: my_class.cpp
test/: CMakeLists.txt
unitTesting/: CMakeLists.txt  TestFail.cpp  TestPass.cpp
